added link to raphael library

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<ol>
 			
 				<li>
-					<p><a href="#download">Download</a>, unzip, and upload the files to your server. Link all necessary files in the head of your document and make sure you also link to the jQuery library. If you plan on using two or more colors, you must also download and link to the raphael SVG library</p>
+					<p><a href="#download">Download</a>, unzip, and upload the files to your server. Link all necessary files in the head of your document and make sure you also link to the jQuery library. If you plan on using two or more colors, you must also <a href="http://raphaeljs.com/">download</a> and link to the raphael SVG library</p>
 					<pre class="prettyprint">
 &lt;!-- Load jQuery Library First --&gt;
 &lt;script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"&gt;&lt;/script&gt;
